--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    
+    <title>Document</title>
+<h1>Hello world</h1>
+
+</head>
+<body>
+    
+</body>
+</html>
+
+
